--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,5 +84,16 @@
         android:layout_height="wrap_content"
         android:text="@string/sign_in" />
 
+    <TextView
+        android:id="@+id/name_list_id"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:layout_margin="16dp"
+        android:padding="8dp"
+        android:text="@string/names"
+        android:textSize="16sp" />
+
+
 
 </LinearLayout>
