--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.SecondActivity">
+    tools:context=".presentation.activities.SecondActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
