--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,74 +9,11 @@
     tools:context=".presentation.activities.MainActivity"
     tools:visibility="visible">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="@string/avatar"
-        tools:srcCompat="@tools:sample/avatars" />
-
-
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/text_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="8dp"
-            android:layout_weight="3"
-            android:text="@string/name"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/edit_name_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="8dp"
-            android:layout_weight="1"
-            android:hint="@string/type_name"
-            android:inputType="text"
-            android:textSize="16sp" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/second_text_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:layout_margin="16dp"
-            android:padding="8dp"
-            android:text="@string/password"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/edit_password_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="8dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/type_password"
-            android:inputType="textPassword"
-            android:textSize="16sp" />
-
-
-    </LinearLayout>
 
     <Button
         android:id="@+id/button_id"
